k8s/gateway/gateway-with-infrastructure.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
spec:
  gatewayClassName: cilium
  # infrastructure:
  #   annotations:
  #     io.cilium/lb-ipam-ips: "10.0.0.20"
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.lenovium.leonvdbeek.com"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-kube-leonvdbeek-com
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: "lenovium.leonvdbeek.com"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-kube-leonvdbeek-com
      allowedRoutes:
        namespaces:
          from: All
